// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Address > should create an address from 0 string 1`] = `"0x0000000000000000000000000000000000000000"`;

exports[`Address > should create an address from 0 string 2`] = `
Uint8Array [
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
]
`;

exports[`Address > should create an address from non zero 1`] = `"0x00000000000000000000000000000000000181cd"`;

exports[`Address > should create an address from non zero 2`] = `
Uint8Array [
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  1,
  129,
  205,
]
`;
